--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div class="alert">DevOps Essencials - 4linux.</div>
+	<div class="alert">DevOps Essencials - Vitor.</div>
 	
 	<div class="container">
 		<div class="logo">
